<resources>
    <string name="app_name">ApeTransfer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="main_bottom_transfer">Transmit file</string>
    <string name="main_bottom_exchange">One-touch device switch</string>
    <string name="subtitle_es">Zero Traffic Transfer File</string>
    <string name="subtitle_exchange">Mobile Moving</string>
    <string name="creat_ap">Create group</string>
    <string name="connect_ap">Search to join</string>
    <string name="main_old_phone">"I'm Old"</string>
    <string name="main_new_phone">"I'm New"</string>
    <string name="main_transfer_info">Create groups while searching to join</string>
    <string name="function_introduce_transfer">Invite friends to get EasyShare</string>
    <string name="main_exchange_info">Generate QR code while scanning for connections</string>
    <string name="invite_friend">Invite friends</string>
    <string name="invite_more">More sharing options</string>
    <string name="invite_share_ap">Sharing without flow</string>
    <string name="invite_share_bluetooth">Sharing via Bluetooth</string>
    <string name="invite_share_code">Scan QR code to share (your friend will use data traffic)</string>
    <string name="invite_share_to">Share to</string>
    <string name="mobile_data_warning">Please disable your network data because traffic may loss!</string>
    <string name="saveTraffic_ap_close">Sorry, hotspot has been turned off!</string>
    <string name="saveTraffic_code_intro">In a browser with the functionality to scan QR codes</string>
    <string name="saveTraffic_code_san">Scan the following QR code:</string>
    <string name="saveTraffic_create_ap_fail">Sorry, failed to create hotspot!</string>
    <string name="saveTraffic_download_prompt">Zero data traffic, download file</string>
    <string name="saveTraffic_download_text">Download</string>
    <string name="saveTraffic_download_title">EasyShare - zero data traffic download</string>
    <string name="saveTraffic_intro">Too much time spent creating the hotspot. Probably your WLAN on/off permission has been disabled, please enable it and re-enter this screen</string>
    <string name="saveTraffic_step1">Step 1</string>
    <string name="saveTraffic_step1_intro">Ask your friend to turn on WLAN and connect to my hotspot:</string>
    <string name="saveTraffic_step2">Step 2</string>
    <string name="saveTraffic_step2_intro">Ask your friend to open the browser and enter the following URL:</string>
    <string name="saveTraffic_step2_other">Or</string>
    <string name="scan_qrcode_to_connect">Scan connection</string>
    <string name="waiting_creating_ap">Creating a hotspot&#8230;</string>
    <string name="actionbar_title_qr_scan">QR Code/ Bar Code</string>
    <string name="qr_scan_tips">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="text_connetion_tip">Please make sure if a group has been created with the other phone</string>
    <string name="main_me">Me</string>
    <string name="created_qrcode_tip">Use another phone to scan the following QR code to connect devices</string>
    <string name="creating_qrcode_tip">Generating QR code, please wait&#8230;</string>
    <string name="title_activity_user_info">Personal info</string>
    <string name="nickname_info">Nickname will be generated randomly by EasyShare. You can modify it later.</string>
    <string name="hint_input_username">Enter a name with no more than 16 characters</string>
    <string name="hint_input_username_empty">NickName must not be null</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="all_rights_reserved" translatable="false">Copyright © 2012&#8211;2016 Broncho. All Rights Reserved.</string>
    <string name="required_permissions_promo">This app needs access to Camera.</string>
    <string name="required_permissions_all">This app needs access to Storage to transfer files, and Location to find other devices.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings &gt; Apps &gt; Me &gt; Permissions.</string>
    <string name="request_scan_result_title">Grant access</string>
    <string name="request_scan_result_message">get wifi scan results will request the LOCATION permission</string>
    <string name="request_write_settings_title">Grant access</string>
    <string name="request_write_settings_message">Allow this app to modify system settings, so it can start connections. Please turn off then turn on the switch after you see the allow permission switch</string>
    <string name="action_save">Save</string>
    <string name="chat_voice_record_cancel">SLIDE TO CANCEL</string>
    <string name="chat_empty_bot">START</string>
    <string name="chat_message_hint">Your message…</string>
    <string name="share_menu_gallery">Gallery</string>
    <string name="share_menu_video">Video</string>
    <string name="share_menu_file">File</string>
    <string name="share_menu_camera">Camera</string>
    <string name="share_menu_contact">Contact</string>
    <string name="share_menu_location">Location</string>
    <string name="hold_to_talk">Hold to talk</string>
    <string name="voice_can_not_send_because_duration_too_short">voice is too short</string>
    <string name="record_has_canceled">Voice is canceled</string>
    <string name="loosen_to_cancel">move up to cancel</string>
    <string name="record_failed">Take voice failed</string>
    <string name="record_failed_no_enough_storage_space">Not enough storage space</string>
    <string name="sliding_upwards_and_cancel_sending">swipe up to cancle</string>
    <string name="doconnect">Connecting&#8230;</string>
    <string name="operation_send">Send</string>
    <string name="bt_disconnect">Quit</string>
    <string name="waiting_create">Creating a group&#8230;</string>
    <string name="waiting_connect">Waiting for the other device to join in</string>
    <string name="waiting_connect_info">Connected users will appear here</string>
    <string name="music">Music</string>
    <string name="category_music">Music</string>
    <string name="category_video">Video</string>
    <string name="category_picture">Picture</string>
    <string name="category_document">Document</string>
    <string name="category_zip">Zip</string>
    <string name="category_apk">Apk</string>
    <string name="empty">No File</string>
    <string name="select_text">%1$d/%2$s</string>
    <string name="select_file">Choose file</string>
    <string name="select_settings">Select Setup</string>
    <string name="selected_none">Nothing selected</string>
    <string name="transfer_discontent">Disconnect?</string>
    <string name="transfer_fail_1">You have disabled the “Turn on/off WLAN” permission for EasyShare. Please allow this permission to return to the home page and retry creating a hotpot.</string>
    <string name="transfer_fail_title">Failed to create hotpot</string>
    <string name="transfer_receive_ok">Receive completed</string>
    <string name="transfer_send_ok">Send completed</string>
    <string name="connect_dialog_title">Prompt</string>
    <string name="notify_close_wlan">WLAN will be turned off temporarily, and will be re-connected after this is completed</string>
    <string name="notify_title">EasyShare reminder</string>
    <string name="share_app" translatable="false">http://fir.im/ApeTransfer</string>
    <string name="default_progress" translatable="false">0%</string>
    <string name="main_receive">I want to receive</string>
    <string name="history_clean">Clear</string>
    <string name="history_empty">Temporarily no records</string>
    <string name="history_not_found">Source file does not exist</string>
    <string name="history_receive">Received</string>
    <string name="history_send">Sent</string>
    <string name="history_title">Records</string>
    <string name="format_from">FROM: %1$s</string>
    <string name="format_to">TO: %1$s</string>
    <string name="permission_title">Grant access</string>
    <string name="permission_refused">Permission refused, the app will exit!</string>
    <string name="done">Start</string>
    <string name="skip">Skip</string>
    <string name="welcome_head_1">Transfer files between any device&#8230;</string>
    <string name="welcome_content_1">Android,iOS,Windows Phone,Mac or PC</string>
    <string name="welcome_head_2">&#8230;Without using internet&#8230;</string>
    <string name="welcome_content_2">Connect directly or use a local network</string>
    <string name="welcome_head_3">…at Wi-Fi speed.</string>
    <string name="welcome_content_3">Transfer large or many files very fast</string>
    <string name="permission_title_all">One more thing&#8230;</string>
    <string name="advance_category">Advance settings</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="title_activity_user_guide">Getting Started</string>
    <string name="guide1_scan_qcode">Scan QR code to share</string>
    <string name="guide1_step1">Turn on “EasyShare” on both phones</string>
    <string name="guide1_step2">If EasyShare is not installed on the other phone?</string>
    <string name="guide1_step3">Please tap “Invite friends” in the “Home screen”</string>
    <string name="guide1_step4">Select the way to invite:</string>
    <string name="guide1_title">Getting Started</string>
    <string name="guide2_step1">Share any file without data traffic</string>
    <string name="guide2_step2">1. Tap on “Transmit file” on the “Main screen”</string>
    <string name="guide2_step3">"2. Tap on “Create a group” on one device to auto create a group
\u0009 Tap on “Search to join” on the other device to select the device to connect"</string>
    <string name="guide2_step4">3. When both devices are successfully connected, select the file you want to send in the “Select file” screen, then tap to “Send”</string>
    <string name="guide2_title">How to use “EasyShare” to transmit files?</string>
    <string name="guide3_select_data">Select data</string>
    <string name="guide3_step1">How to use “EasyShare” for one-touch device switch?</string>
    <string name="guide3_step2">One-touch clone data to new phone</string>
    <string name="guide3_step3">1. Tap on “One-touch device switch” on the Main screen</string>
    <string name="guide3_step4">"2. Tap on “I'm Old” on the sender device to auto generate a QR code; tap on “I'm New” on the recipient device and scan the QR code generated on the other phone."</string>
    <string name="guide3_step5">3. When both devices are successfully connected, select the data to transmit in the “Select data” screen on the old phone; and tap on “Start device switch” after confirmation on the other device.</string>
    <string name="exchange">One-touch device switch</string>
    <string name="aboutUs_copyright">Tinno Communication Technology Co.\n
        Copyright © 1996-2016 Tinno,Inc.\n
        All Rights Reserved.</string>
    <string name="bt_stop_sending">Terminate sending</string>
    <string name="receiving">Receiving data...</string>
    <string name="old_phone_connected_tip">Tip: new phone %1$s connected successfully.</string>
    <string name="old_phone_connected_title">"I'm Old"</string>
    <string name="oldphone_connected_tip">Connected successfully</string>
    <string name="oldphone_data">Old phone %s</string>
    <string name="oldphone_name">Old phone %1$s</string>
    <string name="oldphone_tip">Old phone</string>
    <string name="newPhone_not_enough_space">New phone memory not enough</string>
    <string name="new_phone_connected_tip">Connected successfully, waiting for data backup...</string>
</resources>