<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white"
        android:orderInCategory="100"
        android:title="@string/history_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
