<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff4f4f4"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/guide_paddingLeft"
        android:paddingRight="@dimen/guide_paddingLeft">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_text_marginTop"
            android:text="@string/guide2_title"
            android:textColor="@color/green"
            android:textSize="@dimen/textSize_h1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_step_marginTop"
            android:text="@string/guide2_step1"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/textSize_h5" />

        <TextView
            android:id="@id/tv_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_step_marginTop"
            android:text="@string/guide2_step2"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/textSize_h5" />

        <LinearLayout
            android:layout_width="@dimen/guide2_tranfericon_width"
            android:layout_height="@dimen/guide2_tranfericon_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/guide2_tranfericon_marginTop"
            android:background="@drawable/bg_guide_bt"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/guide3_exchangeicon_wh"
                android:layout_height="@dimen/guide3_exchangeicon_wh"
                android:src="@drawable/transfer_file_focus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_bottom_transfer"
                android:textColor="@color/green"
                android:textSize="@dimen/textSize_h5" />
        </LinearLayout>

        <TextView
            android:id="@id/tv_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide2_tranfericon_marginTop"
            android:lineSpacingExtra="@dimen/guide_lineSpacingExtra"
            android:text="@string/guide2_step3"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/textSize_h5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/guide2_tranfericon_marginTop"
            android:layout_marginTop="@dimen/guide_step_marginTop"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/guide2_tranfericon_wh"
                    android:layout_height="@dimen/guide2_tranfericon_wh"
                    android:layout_marginBottom="@dimen/guide2_tranfericon_marginbottom"
                    android:src="@drawable/guide_ap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creat_ap"
                    android:textColor="@color/green"
                    android:textSize="@dimen/textSize_h5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/guide2_tranfericon_marginleft"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/guide2_tranfericon_wh"
                    android:layout_height="@dimen/guide2_tranfericon_wh"
                    android:layout_marginBottom="@dimen/guide2_tranfericon_marginbottom"
                    android:src="@drawable/guide_join" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_ap"
                    android:textColor="@color/green"
                    android:textSize="@dimen/textSize_h5" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_step4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/guide_lineSpacingExtra"
            android:text="@string/guide2_step4"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/textSize_h5" />
    </LinearLayout>
</ScrollView>