<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share_container"
    android:layout_width="match_parent"
    android:layout_height="245dp"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:visibility="gone"
    android:orientation="vertical">


    <TableLayout
        android:id="@+id/share_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:stretchColumns="*">

        <TableRow>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_camera"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_camera_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_gallery"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_gallery_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_gallery" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_video"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_video_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_video" />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_file"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_file_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_file" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_location"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_location_selector" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/share_contact"
                    android:layout_width="@dimen/share_btn_size"
                    android:layout_height="@dimen/share_btn_size"
                    android:background="@drawable/share_contact_selector" />

                <TextView
                    android:id="@+id/contact_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_menu_contact" />

            </LinearLayout>

        </TableRow>
    </TableLayout>

</LinearLayout>